features added in publications section

--- a/src/posts/competitive-programming-algorithms.mdx
+++ b/src/posts/competitive-programming-algorithms.mdx
@@ -1,10 +1,10 @@
 ---
-title: Competitive Programming Algorithms Every Beginner Must Know
-abstract: Master these algorithms to kickstart your CP journey
+title: Advancing Speaker Diarization with Whisper Speech Recognition 
+abstract: Learn about Speaker Diarization and it's usecases
 date: '2022-02-19'
 banner: /static/modern-react-css-banner.jpg
 featured: true
-externalUrl: "https://google.com"
+externalUrl: "https://2024.tale-conference.org/"
 slug: "ccp"
 ---
 
