--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'TALE Conference'
-abstract: 
-date: '2023-06-24'
+title: 'Advancing Speaker Diarization with Whisper Speech Recognition for Different Learning Environments'
+abstract: 'Accepted at IEEE TALE 2024'
+date: '2024-12-09'
 banner: /static/hello-world-banner.jpg
 externalUrl: "https://2024.tale-conference.org/"
 slug: "TALE Conference"
