--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -6,6 +6,13 @@ banner: /static/hello-world-banner.jpg
 externalUrl: "https://2024.tale-conference.org/"
 slug: "TALE Conference"
 ---
+title: 'Unlocking the Triggers: Automating the Identification of Triggers of Socially Shared Metacognitive Regulation in Collaborative Problem-Solving'
+abstract: 'Accepted at EdTech Society T4E 2024'
+date: '2024-12-08'
+banner: /static/hello-world-banner.jpg
+externalUrl: "https://etsociety.org/t4e2024/"
+slug: "T4E Conference"
+---
 
 ## Greetings ^.^
 
