--- a/src/posts/competitive-programming-algorithms.mdx
+++ b/src/posts/competitive-programming-algorithms.mdx
@@ -5,7 +5,7 @@ date: '2024-12-09'
 banner: /static/modern-react-css-banner.jpg
 featured: true
 externalUrl: "https://2024.tale-conference.org/"
-slug: "ccp"
+slug: "TALE Conference"
 ---
 
 If you are a coding enthusiast of any sort, you must know what competitive programming is. Competitive programming (famously abbreviated as CP) is just like any other eSport. CP is a mental sport in which you must code a problem presented to you while adhering to certain limits, also known as constraints. In a normal CP contest, you are given a number of questions that range through various difficulty levels, involving the use of various data structures, logic, and mathematics. Taking part in such contests not only increases your problem-solving skills but also increases logic building and the ability to think faster in complex problem statements.
